--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    width: 100%;
+    overflow: auto;
+    position: relative;
+}
+header{
+    width: 100%; 
+    height: 100px !important;
+}
+
+header ul{
+    margin: 0 auto;
+    position: relative;
+}
